# mozichem-hub

./: .gitignore  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt
examples/api/: create-api.py  eos-models-mcp.py  mcp-api.py
examples/execute/: bubble-pressure.py  bubble-temperature.py  dew-pressure.py  dew-temperature.py  flash-isothermal.py  fugacity.py  fugacity_mixture.py  fugacity_with_external_reference.py  fugacity_with_external_reference_default.py  method-info.py
examples/generals/: descriptor.py
examples/mcp/: eos-models-mcp-with-reference.py  eos-models-mcp.py  flash-calculations-mcp.py  thermodynamic-properties-mcp.py
examples/references/: doc1.py  doc2.py  reference-checker.py  reference-config.py
mozichem_hub/: __init__.py  app.py
mozichem_hub/api/: __init__.py  api_builder.py  main.py
mozichem_hub/config/: __init__.py  constants.py  modules.py  settings.py
mozichem_hub/data/: __init__.py  datamodels.py  mozifunctions.py  references.yml  thermodb.py  thermodbref.py  thermodbrule.py
mozichem_hub/descriptors/: __init__.py  main.py  mcp_descriptor.py  prlcore.yml  ptdbcore.yml  ptfcore.yml  ptmcore.yml  tool_descriptor.py
mozichem_hub/docs/: __init__.py  adapter.py  controller.py  core.py  mcp.py  mcp_hub.py  reference_services.py  registry.py  server.py  services.py
mozichem_hub/errors/: __init__.py  api_exceptions.py  mcp_exceptions.py  ptf_exceptions.py  ptm_exceptions.py  reference_exceptions.py  resource_exceptions.py  tool_exceptions.py  utils_exceptions.py
mozichem_hub/executors/: __init__.py  executer.py
mozichem_hub/manager/: __init__.py  builder.py  dispatcher.py  hub.py  models.py  ptmcore.py  registery.py
mozichem_hub/models/: __init__.py  mcp_models.py  references_models.py  resources_models.py  uni_models.py
mozichem_hub/prebuilt/: __init__.py  manager.py
mozichem_hub/references/: __init__.py  adapter.py  config.md  config.py  contents.py  initializer.py  link.py  models.py  reference.py  reference_adapter.py  reference_controller.py  reference_mapper.py  reference_services.py  references.yml  references_initializer.py  referencethermodb_controller.py  rules.py  symbols.py
mozichem_hub/resources/: __init__.py  class_builder.py  function_dispatcher.py  hub.py  hub_manager.py  models.py  mozi_tool_builder.py  ptdbcore.py  ptfcore.py  ptmcore.py  reference_utils.py  utils.py
mozichem_hub/tools/: __init__.py  builder.py  core.py  manager.py  models.py  tool_builder.py  tool_manager.py
mozichem_hub/utils/: __init__.py  component_utils.py  loader.py  mcp_controller.py  reference.py  ui_tools.py
references/: General Data.csv  Vapor Pressure.csv  create-reference.py  custom-references.yml  general-data.csv  load-custom-reference.py
tests/: bubble-pressure.py  check_packages.py  claude-1.json  custom_tools.py  eos-models-mcp.py  flash-calculations-mcp.py  fugacity.py  fugacity_mixture.py  mcp-api.py  reference-checker.py  test0.py  test1.py  test2.py  test3.py  thermodynamic-properties-mcp.py
