[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mozichem-hub"
version = "0.1.0"
description = "MoziChem-Hub"
authors = [
    { name = "Sina Gilassi", email = "sina.gilassi@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic",
    "pydantic-settings",
    "fastmcp",
    "pyyaml",
    "pythermodb>=1.11.3",
    "pythermolinkdb>=1.3.3",
    "pythermomodels>=1.4.8",
]

[project.urls]
"Homepage" = "https://github.com/sinagilassi/mozichem-hub"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools.package-data]
"mozichem_hub" = ["config/*.yml", "data/*.csv"]
