[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mozichem-hub"
version = "0.1.0"
description = "MoziChem-Hub"
authors = [
    { name = "Sina Gilassi", email = "sina.gilassi@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "fastmcp>=2.10.2",
    "rich>=14.0.0",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "websockets>=11.0.0",
    "pyyaml>=6.0.2",
    "pythermodb>=1.11.11",
    "pythermolinkdb>=1.3.7",
    "pythermomodels>=1.4.8",
    "pythermoflash>=0.1.5"
]

[project.urls]
"Homepage" = "https://github.com/sinagilassi/mozichem-hub"

[tool.setuptools.packages.find]
where = ["."]
include = ["mozichem_hub*"]
exclude = ["tests*","examples*", "references*"]

[tool.setuptools.package-data]
"mozichem_hub" = ["descriptors/*.yml"]
