[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mozichem-hub"
version = "0.1.2"
description = "MoziChem-Hub"
authors = [
    { name = "Sina Gilassi", email = "sina.gilassi@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.116.1",
    "fastmcp>=2.12.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pythermodb>=1.11.22",
    "pythermoflash>=0.1.5",
    "pythermolinkdb>=1.3.8",
    "pythermomodels>=1.4.8",
    "pyyaml>=6.0.2",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[project.urls]
"Homepage" = "https://github.com/sinagilassi/mozichem-hub"

[tool.setuptools.packages.find]
where = ["."]
include = ["mozichem_hub*"]
exclude = ["tests*", "examples*", "references*"]

[tool.setuptools.package-data]
"mozichem_hub" = ["descriptors/*.yml", "references/*.yml", "references/*.md"]
